apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'jetty'
sourceCompatibility = 1.8
version = '1.0'
group = 'miwork'

test {
    jvmArgs "-XX:MaxPermSize=256m"
}

tasks.withType(Compile) {
  options.encoding = "UTF-8"
}

task wrapper(type: Wrapper) {
    gradleVersion = "1.9-rc-3"
}

repositories {
    jcenter()
}

dependencies {
    compile fileTree(dir: 'src/main/webapp/WEB-INF/lib', include: '*.jar')
    providedCompile fileTree(dir: '~/Documents/java/apache-tomcat-7.0.47/lib', include: '*.jar')
}
